Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -149,9 +149,6 @@ input[type=submit],
 	width: 100%;
 }
 
-.widget .extendednavigation ul {
-	text-align: center;
-}
 .widget .extendednavigation li > .text,
 .widget .extendednavigation ul li a {
 	padding: 0;
